src/test/deca/context/valid/condition_so.deca
// Description:
//    Tester la condition if  else if et else
//
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 01/01/2023
{

	boolean testBool = true;
	if (testBool==false){
		
	}
}
