src/test/deca/context/invalid/print_superposition.deca
// Description:
//    Tester quand deux print se superpose;
//
// Resultats:
//    mismatched input
//
// Historique:
//    cree le 01/01/2023

{
         println(print());

}